assets/css/style.css
/* ... */
#preloader .circle {
    width: 40px;
    height: 40px;
    border: 4px solid var(--primaryColor);
    border-radius: 50%;
    background-color: transparent;
    animation: spinPreloader 2s ease-in-out infinite;
}
@keyframes spinPreloader {
    0% {
        transform: scale(0.5, 0.5);
        border-color: #777777;
    }
    30% {
        transform: scale(1, 1);
        border-color: var(--primaryColor);
    }
    40% {
        transform: scale(0.8, 0.8);
        border-color: var(--primaryColor);
    }
    50% {
        transform: scale(1, 1);
        border-color: var(--primaryColor);
    }
    100% {
        transform: scale(0.5, 0.5);
        border-color: #777777;
    }
}


/*--------------------------------------------------------------
# Sections General Heading
--------------------------------------------------------------*/
section {
    padding: 5% 0;
}
.heading {
    text-align: center;
    margin-bottom: 5%;
}
.heading h4 {
    color: #000;
    font-weight: 300px;
    font-size: 14px;
    text-transform: uppercase;
    position: relative;
    margin-bottom: 10px;
} 
.heading p {
    position: relative;
    font-weight: 600;
    font-size: 16px;
    color: var(--primaryColor);
    text-transform: capitalize;
    margin: auto;
}
section .heading-texts h2 {
    font-weight: 700;
}
section .heading-texts span {
    color: var(--primaryColor)
}

/*--------------------------------------------------------------
# Navbar section
--------------------------------------------------------------*/
.nav .nav-item .nav-link.active {
    background: var(--primaryColor);
}

nav {
    padding: 0 8.5%;
    color: #000;
    background-color: #fff;
}
nav.scrolled {
    box-shadow: 0 3px 10px rgba(9, 9, 9, 0.109);
}
nav .navbar-nav  {
    margin-top: -10px;
    flex: 1;
    display: flex;
}
a.nav-link {
    color: rgba(0, 0, 0, 0.983);
    cursor: pointer;
}
a.active, a.nav-link:hover {
    color: var(--primaryColor);
}
nav .menu-links {
    flex: 1;
}
nav .nav-item {
    display: inline-block;
    margin-bottom: -10px;
}
nav .nav-item.socials i {
    cursor: pointer;
}
nav .nav-item.socials i:hover {
    color: var(--primaryColor);
}
@media (max-width: 1068px) {
    nav .nav-item {
        display: inline-block;
        margin: 10px 0;
    }

}
@media (max-width: 850px) {
    nav .nav-item.socials {
        display: none;
    }
}
@media (max-width: 570px) {
    nav .menu-links {
        text-align: left;
    }
    nav .nav-item {
        display: block;
        margin: 10px 0;
    }
    nav .nav-item.socials {
        display: block;
    }
}


/*--------------------------------------------------------------
# Header section
--------------------------------------------------------------*/

header {
    margin: 3% 8.5%;
    height: 80vh;
    box-shadow: 2px 2px 10px rgba(153, 153, 153, 0.201);
    position: relative;
    overflow: hidden;
}
header#home .slide {
    display: none;
}
header#home .slide.active {
    display: flex;
    align-items: center;
}
header .hero {
    padding: 4%;
    margin: 0 5%;
    position: relative;
}
header .hero .back {
    position: absolute;
    font-size: 5vw;
    font-family:'Times New Roman', Times, serif;
    top: -3%;
    left: -3%;
    color: rgba(0, 0, 0, 0.056);
}
header .hero h1 {
    font-size: 30px;
    font-weight: 600;
    font-family: 'Source Sans Pro';
    opacity: 0;
    animation: heroSlide 10s ease-in-out;
    animation-delay: 0s;
}
header .hero h1 span {
    color: var(--primaryColor);
}
header .hero p {
    opacity: 0;
    animation: heroSlide 9.0s ease-in-out;
    animation-delay: 1s;
}
header .hero-input {
    padding: 2px;
    display: flex;
    justify-content: space-between;
    opacity: 0;
    animation: heroSlide 8.5s ease-in-out;
    animation-delay: 1.5s;
}
header .hero-input input {
    border: none;
    padding: 10px ;
    font-size: 14px;
    outline-color: none;
    flex: 1;
}
header .hero button {
    font-size: 10px;
    padding: 10px 20px;
    background: var(--primaryColor); 
    color: #fff;
}
header .hero button:hover {
    background: #000;
    color: #fff;
}
header img {
    background-color: #f0f0f0;
    height: 80vh;
    width: 50%;
    object-fit: cover;
    animation: imgSlide 10s ease-in-out;
}
header .hero-bottom {
    font-size: 10px;
    color: rgb(79, 79, 79);
    position: absolute;
    bottom: -20px;
    left: 8%;
}
header .hero-bottom i,
header .hero-bottom span {
    color: var(--primaryColor);
}
header .hero-bottom i {
    padding: 10px 12px;
    margin: 0 10px;
    margin-bottom: 20px;
    border: 1px solid rgb(199, 199, 199);
    border-radius: 50%;
    cursor: pointer;
}
header .hero-bottom i:hover {
    border: 1px solid #fff;
    color: #fff;
    background-color: var(--primaryColor);
}

header .slide:nth-child(2) .hero h1 span {
    color: var(--slide2);
}
header .slide:nth-child(2) .hero .hero-input button {
    background-color: var(--slide2);
}
header .slide:nth-child(3) .hero h1 span {
    color: var(--slide3);
}
header .slide:nth-child(3) .hero .hero-input button {
    background-color: var(--slide3);
}
header .slide:nth-child(4) .hero h1 span {
    color: var(--slide4);
}
header .slide:nth-child(4) .hero .hero-input button {
    background-color: var(--slide4);
}
header .slide:nth-child(5) .hero h1 span {
    color: var(--slide5);
}
header .slide:nth-child(5) .hero .hero-input button {
    background-color: var(--slide5);
}
/* ... */

